--- a/src/components/Cart/index.css
+++ b/src/components/Cart/index.css
@@ -6,5 +6,22 @@
   height: 70vh;
 }
 .cart-img {
-  width: 150px;
+  width: 24%;
+}
+
+.button {
+  font-family: 'Roboto';
+  font-size: 15px;
+  font-weight: 500;
+  background-color: #3b82f6;
+  border: none;
+  border-radius: 4px;
+  padding-top: 13px;
+  padding-bottom: 12px;
+  padding-left: 22px;
+  padding-right: 22px;
+  color: #ffffff;
+  outline: none;
+  cursor: pointer;
+  margin-top: 20px;
 }
